--- a/crud_sencillo/composer.json
+++ b/crud_sencillo/composer.json
@@ -12,6 +12,8 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "laravel-lang/lang": "^10.4",
+        "laravel-lang/publisher": "^12.2",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5"
     },
